# dogs-api

./: .gitignore  Dockerfile  README.md  pyproject.toml
core/: manage.py
core/core/: settings.py  urls.py
core/dogs/: admin.py  middleware.py  serializers.py  urls.py
core/dogs/controllers/: base.py  breed.py  dog.py
core/dogs/management/commands/: populate_dogs.py
core/dogs/migrations/: 0001_initial.py  0002_alter_breed_name.py
core/dogs/models/: breed.py  dog.py
core/dogs/repositories/: base_repository.py  breed_repository.py  dog_repository.py
core/dogs/services/: base_service.py  breed_service.py  dog_service.py
core/dogs/utils/: custom_types.py
infra/: docker-compose.yaml
